<resources>
    <string name="app_name">Android-snake</string>
    <string name="score">Score: 0</string>
    <string name="best_score">Best score: 0</string>
    <string name="game_over">Game over!</string>
    <string name="ok">OK</string>
    <string name="title">Snake</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
</resources>